tests/good/binop/int/eq.go
package main;
import "fmt";

func main(){
	fmt.Print(2==2)
	fmt.Print(2==3)
}

/*
== Expected program output ==
1
0
*/