tests/bad/func/return/missing_return_type_block.go
package main;

func fact ( n int ) int {
	if 7%2 == 0 {
        
    } else {
        return 1;
    }
}



func main () {
	}

/*
== Expected compiler output ==
File "./tests/bad/func/return/missing_return_type_block.go", line 3, characters 5-9:
error: missing return statements for function 'fact'
*/
